# ros2_workspace

./: .gitignore  README.md  frames_2025-12-10_02.12.42.gv  frames_2025-12-11_21.44.50.gv  frames_2025-12-13_13.50.14.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/Erum_pde4430/lib/Erum_pde4430/: circle_move  circular_move  figure8_move  straightmove  user_coordinates
install/Erum_pde4430/share/Erum_pde4430/: package.bash  package.dsv  package.ps1  package.sh  package.xml
install/add_two_ints_pkg/lib/add_two_ints_pkg/: minimal_server
install/add_two_ints_pkg/share/add_two_ints_pkg/: package.sh  package.xml  package.zsh
install/ball_bot_description/share/ball_bot_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ball_bot_description/share/ball_bot_description/cmake/: ball_bot_descriptionConfig.cmake
install/ball_bot_description/share/ball_bot_description/launch/: spawn_ball_bot.launch.py
install/ball_bot_description/share/ball_bot_description/urdf/: ball_bot.urdf
install/flap_teleop/lib/flap_teleop/: flap_teleop_node
install/flap_teleop/share/flap_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gazebo_differential_drive_robot/share/gazebo_differential_drive_robot/: local_setup.sh  package.sh
install/gazebo_differential_drive_robot/share/gazebo_differential_drive_robot/launch/: robot.launch.py
install/mobile_robot/share/mobile_robot/: package.sh  package.xml
install/mobile_robot/share/mobile_robot/cmake/: mobile_robotConfig.cmake
install/mobile_robot/share/mobile_robot/model/: robot.xacro
install/my_first_pkg/lib/my_first_pkg/: minimal_subscriber
install/my_first_pkg/share/my_first_pkg/: package.sh
install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/launch/: my_robot.launch.py  my_robot.launch.xml
install/my_robot_description/share/my_robot_description/: package.sh
install/my_robot_description/share/my_robot_description/urdf/: common_properties.xacro  mobile_base.xacro
install/my_xacro_robot/share/my_xacro_robot/: package.bash  package.zsh
install/new_interfaces/share/new_interfaces/: package.ps1  package.sh
install/new_interfaces/share/new_interfaces/cmake/: export_new_interfaces__rosidl_generator_cExport-noconfig.cmake  export_new_interfaces__rosidl_generator_cExport.cmake  export_new_interfaces__rosidl_generator_cppExport.cmake  export_new_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_new_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  new_interfacesConfig.cmake  new_interfaces__rosidl_typesupport_cppExport.cmake  new_interfaces__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake-extras.cmake
install/new_interfaces/share/new_interfaces/msg/: IotSensor.idl  IotSensor.json
install/new_interfaces/share/new_interfaces/srv/: AddTwoInts.idl
install/rect_area_pkg/share/rect_area_pkg/: package.ps1  package.sh
log/: latest_build
maps/: final_map.pgm  final_map.yaml
src/Erum_pde4430/: README.md  setup.cfg  setup.py
src/Erum_pde4430/Erum_pde4430/: straightmove.py
src/Formative_Excersise/: README.md
src/add_two_ints_pkg/: setup.cfg  setup.py
src/add_two_ints_pkg/add_two_ints_pkg/: minimal_client.py
src/assessment_world/worlds/: assessment.sdf
src/ball_tracker/: package.xml  setup.py
src/ball_tracker/ball_tracker/: tracker_node.py
src/flap_teleop/: package.xml  setup.cfg  setup.py
src/flap_teleop/flap_teleop/: flap_teleop_node.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/Erum_pde4430/lib/Erum_pde4430/: 4bots  figure8_move  roomba_cleaner  straightmove  userinput
src/install/Erum_pde4430/share/Erum_pde4430/: package.sh  package.zsh
src/install/add_two_ints_pkg/lib/add_two_ints_pkg/: minimal_client
src/install/add_two_ints_pkg/share/add_two_ints_pkg/: package.bash  package.dsv  package.ps1  package.sh
src/install/gazebo_differential_drive_robot/share/gazebo_differential_drive_robot/: local_setup.sh  package.sh
src/install/mobile_robot/share/mobile_robot/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
src/install/mobile_robot/share/mobile_robot/launch/: spawn_robot.launch.py
src/install/mobile_robot/share/mobile_robot/model/: robot.gazebo  robot.xacro
src/install/mobile_robot/share/mobile_robot/parameters/: bridge_parameters.yaml  diffdrive_controllers.yaml  flap_controllers.yaml
src/install/my_first_pkg/share/my_first_pkg/: package.sh  (+1 more)
src/install/rect_area_pkg/share/rect_area_pkg/: package.bash  package.dsv  package.sh  package.xml  package.zsh
src/log/: latest_build
src/mobile_robot/: CMakeLists.txt  package.xml
src/mobile_robot/config/: flap_controllers.yaml  flap_tb3_bridge.yaml  gz_bridge.yaml  slam_params.yaml
src/mobile_robot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/mobile_robot/install/mobile_robot/lib/mobile_robot/: flap_teleop_node.py
src/mobile_robot/install/mobile_robot/share/mobile_robot/: package.sh
src/mobile_robot/install/mobile_robot/share/mobile_robot/config/: gz_bridge.yaml
src/mobile_robot/launch/: flap_bot_launch.py  flap_tb3_slam.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  robot.launch.py  rsp.launch.py  slam.launch.py  slam_tf.launch.py
src/mobile_robot/log/: latest_build
src/mobile_robot/maps/: my_map_save.pgm  my_map_save.yaml
src/mobile_robot/model/: flap_bot.xacro  flap_tb3_bot.xacro
src/mobile_robot/rviz/: drive_bot.rviz  flap_robot_slam.rviz  view_bot.rviz
src/mobile_robot/tf_frames/: frames_2025-12-19_22.03.02.gv
src/my_first_pkg/: setup.py
src/my_robot_description/launch/: gazebo.launch.py
src/my_robot_description/urdf/: mobile_base.xacro
src/new_interfaces/: CMakeLists.txt  package.xml
src/new_interfaces/srv/install/: local_setup.sh  setup.sh
src/new_interfaces/srv/log/: latest_build
src/rect_area_pkg/: setup.cfg  setup.py
(+60 files in other folders)
