<package format="3">
  <name>flap_teleop</name>
  <version>0.0.0</version>
  <description>Keyboard teleoperation for flaps</description>
  <maintainer email="58556663+Erum330@users.noreply.github.com">erum</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
