<?xml version="1.0"?>
<package format="3">
  <name>mobile_robot</name>
  <version>0.0.1</version>
  <description>Mobile robot simulation with wheels, flaps, and lidar</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>position_controllers</depend>
</package>
